--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -7,7 +7,7 @@ replicaCount: 1
 image:
   repository: "ibayro"
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "v1.0.3-5b9ca00"
+  tag: "1.0.4-79fbb34"
   arc: amd64
 secret:
   name: "kbot"
