--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -39,7 +39,7 @@ spec:
           volumeMount:
           - mountPath: /dev/mem
             name: dev-mem
-          image: {{ .Values.image.repository }}/{{ .Chart.Name }}:{{ .Values.image.tag }}-{{ .Values.image.arch | default "amd64"}}
+          image: {{ .Values.image.repository }}/{{ .Release.Name }}:{{ .Values.image.tag }}-{{ .Values.image.arch | default "amd64"}}
           env:
           - name: {{ .Values.secret.tokenName }}
             valueFROM:
