--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -18,3 +18,9 @@ jobs:
           with:
             username: ${{ secrets.DOCKERHUB_USERNAME }}
             password: ${{ secrets.DOCKERHUB_TOKEN }}
+        - name: build&push
+          env:
+            APP: "kbot"
+            REGISTRY: ${{ secrets.DOCKERHUB_USERNAME }}
+          run: make image push
+
