push windows image

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -22,5 +22,5 @@ jobs:
           env:
             APP: "kbot"
             REGISTRY: ${{ secrets.DOCKERHUB_USERNAME }}
-          run: make image push
+          run: make image_windows push_windows
 
