--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,6 +19,9 @@ jobs:
             username: ${{ secrets.DOCKERHUB_USERNAME }}
             password: ${{ secrets.DOCKERHUB_TOKEN }}
         - name: build&push
+          uses: docker/build-push-action@v4
+          with:
+            push: true
           env:
             APP: "kbot"
             REGISTRY: ${{ secrets.DOCKERHUB_USERNAME }}
