--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -22,6 +22,7 @@ jobs:
           uses: docker/build-push-action@v4
           with:
             push: true
+            tags: user/app:latest
           env:
             APP: "kbot"
             REGISTRY: ${{ secrets.DOCKERHUB_USERNAME }}
