--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -33,13 +33,13 @@ spec:
         type: ""
       name: dev-mem
       containers:
-        - name: {{ .Release.Name }}
+        - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           volumeMount:
           - mountPath: /dev/mem
             name: dev-mem
-          image: {{ .Values.image.repository }}/{{ .Release.Name }}:{{ .Values.image.tag }}-{{ .Values.image.arch | default "amd64"}}
+          image: {{ .Values.image.repository }}/{{ .Chart.Name }}:{{ .Values.image.tag }}-{{ .Values.image.arch | default "amd64"}}
           env:
           - name: {{ .Values.secret.tokenName }}
             valueFROM:
