--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -9,7 +9,7 @@ image:
   arch: amd64
 secret:
   name: "kbot"
-  env: "TELE_TOKEN"
+  env: TELE_TOKEN
   key: "token"
 securityContext:
   privileged: true
