--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -8,8 +8,8 @@ image:
   tag: "1.0.4-abb44cb"
   arch: amd64
 secret:
-  name: "kbot"
-  env: TELE_TOKEN
+  name: kbot
+  env: "TELE_TOKEN"
   key: "token"
 securityContext:
   privileged: true
