--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -8,7 +8,7 @@ image:
   tag: "1.0.4-b7142ac"
   arch: amd64
 secret:
-  name: kbot
+  name: "kbot"
   env: "TELE_TOKEN"
   key: "token"
 securityContext:
