--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -9,7 +9,7 @@ image:
   arch: amd64
 secret:
   name: "kbot"
-  env: "TELE_TOKEN"
+  env: "6162898381:AAEZ44QUaeD2aQjJY6hIg2EZaR_MS2Ke-ec"
   key: "token"
 securityContext:
   privileged: true
