--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,6 +1,8 @@
 name: Kbot_CiCd
 
-on: push
+on: 
+  push:
+    branches: [ develop ]
 
 jobs:
     ci:
@@ -23,7 +25,7 @@ jobs:
         - name: build&push
           env:
             APP: "kbot"
-            REGISTRY: ${{ secrets.DOCKERHUB_USERNAME }}
+            REGISTRY: ${{ secrets.GHCR }}
           run: make image push
 
     cd:
