--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -4,8 +4,10 @@
 
 replicaCount: 1
 image:
-  repository: "ibayro"
-  tag: "1.0.4-30ebe4a"
+  registry: "ghcr.io"
+  repository: "ibayro/kbot"
+  tag: "1.0.4-9b5536d"
+  os: linux
   arch: amd64
 secret:
   name: "kbot"
