--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,7 +25,7 @@ jobs:
         - name: build&push
           env:
             APP: "kbot"
-            REGISTRY: ${{ secrets.GHCR }}
+            REGISTRY: ${{ secrets.DOCKERHUB_USERNAME }}
           run: make image push
 
     cd:
