--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -18,7 +18,7 @@ jobs:
         - name: Run test
           run: make test
         - name: Docker Hub login
-          uses: docker/login-action@v2
+          uses: ghcr/login-action@v2
           with:
             username: ${{ secrets.DOCKERHUB_USERNAME }}
             password: ${{ secrets.GHCR_TOKEN }}
