--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -18,14 +18,14 @@ jobs:
         - name: Run test
           run: make test
         - name: Docker Hub login
-          uses: ghcr/login-action@v2
+          uses: docker/login-action@v2
           with:
             username: ${{ secrets.DOCKERHUB_USERNAME }}
-            password: ${{ secrets.GHCR_TOKEN }}
+            password: ${{ secrets.DOCKERHUB_TOKEN }}
         - name: build&push
           env:
             APP: "kbot"
-            REGISTRY: ${{ secrets.DOCKERHUB_USERNAME }}
+            REGISTRY: ghcr.io
           run: make image push
 
     cd:
