--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -15,17 +15,18 @@ jobs:
           with:
             fetch-depth: 0
 
-        - name: Run test
-          run: make test
-        - name: Docker Hub login
-          uses: docker/login-action@v2
-          with:
-            username: ${{ secrets.DOCKERHUB_USERNAME }}
-            password: ${{ secrets.DOCKERHUB_TOKEN }}
+ #       - name: Run test
+ #         run: make test
+ #       - name: Docker Hub login
+ #         uses: docker/login-action@v2
+ #         with:
+ #           username: ${{ secrets.DOCKERHUB_USERNAME }}
+ #           password: ${{ secrets.DOCKERHUB_TOKEN }}
         - name: build&push
           env:
             APP: "kbot"
             REGISTRY: ghcr.io
+            repository: ibayro/kbot
           run: make image push
 
     cd:
