--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -15,18 +15,23 @@ jobs:
           with:
             fetch-depth: 0
 
-        - name: Run test
-          run: make test
-        - name: Docker Hub login
+ #       - name: Run test
+ #         run: make test
+ #       - name: Docker Hub login
+ #         uses: docker/login-action@v2
+ #         with:
+ #           username: ${{ secrets.DOCKERHUB_USERNAME }}
+ #           password: ${{ secrets.GHCR_TOKEN }}
+        - name: Login to GitHub Container Registry
           uses: docker/login-action@v2
           with:
-            username: ${{ secrets.DOCKERHUB_USERNAME }}
+            registry: ghcr.io
+            username: ${{ github.actor }}
             password: ${{ secrets.GHCR_TOKEN }}
         - name: build&push
           env:
             APP: "kbot"
             REGISTRY: ghcr.io
-            repository: ibayro/kbot
           run: make image push
 
     cd:
