--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -5,8 +5,8 @@
 replicaCount: 1
 image:
   registry: "ghcr.io"
-  repository: "ibayro/kbot"
-  tag: "1.0.4-77261e5"
+  repository: "ibayro/"
+  tag: "1.0.4-fe92813"
   os: linux
   arch: amd64
 secret:
