--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 image:
   registry: "ghcr.io"
   repository: "ibayro/kbot"
-  tag: "1.0.4-198ff6b"
+  tag: "v1.0.4-198ff6b"
   os: linux
   arch: amd64
 secret:
