--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -15,19 +15,19 @@ jobs:
           with:
             fetch-depth: 0
 
- #       - name: Run test
- #         run: make test
- #       - name: Docker Hub login
- #         uses: docker/login-action@v2
- #         with:
- #           username: ${{ secrets.DOCKERHUB_USERNAME }}
- #           password: ${{ secrets.GHCR_TOKEN }}
-        - name: Login to GitHub Container Registry
+#        - name: Run test
+#          run: make test
+        - name: Docker Hub login
           uses: docker/login-action@v2
           with:
-            registry: ghcr.io
-            username: ${{ github.actor }}
-            password: ${{ secrets.GHCR_TOKEN }}
+            username: ${{ secrets.DOCKERHUB_USERNAME }}
+            password: ${{ secrets.DOCKERHUB_TOKEN }}
+#        - name: Login to GitHub Container Registry
+#          uses: docker/login-action@v2
+#          with:
+#            registry: ghcr.io
+#            username: ${{ github.actor }}
+#            password: ${{ secrets.GHCR_TOKEN }}
         - name: build&push
           env:
             APP: "kbot"
