--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -4,9 +4,8 @@
 
 replicaCount: 1
 image:
-  registry: "ghcr.io"
-  repository: "ibayro/kbot"
-  tag: "v1.0.5-882830e"
+  repository: "ibayro"
+  tag: "v1.0.5-e80b9c4"
   os: linux
   arch: amd64
 secret:
