--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -55,3 +55,4 @@ jobs:
           git config user.email github-actuins@github.com
           git commit -am "update version $VERSION"
           git push
+          git pull
