--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -13,6 +13,6 @@ image:
 secret:
   name: "kbot"
   env: "TELE_TOKEN"
-  key: "6162898381:AAEZ44QUaeD2aQjJY6hIg2EZaR_MS2Ke-ec"
+#  key: "6162898381:AAEZ44QUaeD2aQjJY6hIg2EZaR_MS2Ke-ec"
 securityContext:
   privileged: true
