--- a/helm/templates/secret.yaml
+++ b/helm/templates/secret.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-    token: #6162898381:AAEZ44QUaeD2aQjJY6hIg2EZaR_MS2Ke-ec
+#    token: 6162898381:AAEZ44QUaeD2aQjJY6hIg2EZaR_MS2Ke-ec
 kind: Secret
 metadata:
     creationTimeStamp: null
